# telegram-bot

./: README.md  circle.yml  stack.yaml  telegram.cabal
app/: Main.hs
src/: Telegram.hs
src/Telegram/: Ext.hs  Help.hs  Timetable.hs
